DCMEE-1729: Increase the default permgen space for the Windows service